Updated test suite to better handle blocks, but far from perfectly.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ MasterThesis/RePair_v2/Debug/RCa08436
 MasterThesis/RePair_v2/Debug/RCa06288
 MasterThesis/RePair_v2/Debug/RCa01560
 MasterThesis/RePair_v2/TestData.csv
+*.csv
+MasterThesis/RePair_v2/Release/RCa04956
+MasterThesis/RePair_v2/Release/RCa07280
+MasterThesis/RePair_v2/Release/RCa09820
+MasterThesis/RePair_v2/Release/RCa11884
