--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ MasterThesis/RePair_v2/Release/RCa07280
 MasterThesis/RePair_v2/Release/RCa11884
 *.csv
 MasterThesis/RePair_v2/resource.h
+MasterThesis/RePair_v2/Release/RCa00092
