Made it so all statistics are generated based on the first block read.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ MasterThesis/RePair_v2/Release/RCa04956
 MasterThesis/RePair_v2/Release/RCa07280
 MasterThesis/RePair_v2/Release/RCa09820
 MasterThesis/RePair_v2/Release/RCa11884
+MasterThesis/RePair_v2/Release/RCa00092
