--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ MasterThesis/RePair_v2/Release/RCa07280
 MasterThesis/RePair_v2/Release/RCa09820
 MasterThesis/RePair_v2/Release/RCa11884
 MasterThesis/RePair_v2/Release/RCa00092
+MasterThesis/RePair_v2/Release/RCa04636
