Updated test suite.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ MasterThesis/RePair_v2/Release/RCa11884
 *.csv
 MasterThesis/RePair_v2/resource.h
 MasterThesis/RePair_v2/Release/RCa00092
+MasterThesis/RePair_v2/Release/RCa03744
