--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ MasterThesis/RePair_v2/Release/RCa11884
 MasterThesis/RePair_v2/resource.h
 MasterThesis/RePair_v2/Release/RCa00092
 MasterThesis/RePair_v2/Release/RCa03744
+MasterThesis/RePair_v2/Release/RCa07248
