--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ MasterThesis/RePair_v2/Release/RCa11884
 MasterThesis/RePair_v2/Release/RCa00092
 MasterThesis/RePair_v2/Release/RCa04636
 *.xlsx
+MasterThesis/RePair_v2/Release/RCa03744
+MasterThesis/RePair_v2/Release/RCa07248
