--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ MasterThesis/RePair_v2/resource.h
 MasterThesis/RePair_v2/Release/RCa00092
 MasterThesis/RePair_v2/Release/RCa03744
 MasterThesis/RePair_v2/Release/RCa07248
+MasterThesis/RePair_v2/Release/RCa09716
